fixed store search box width on firefox

--- a/cravat/webstore/webstore.css
+++ b/cravat/webstore/webstore.css
@@ -291,3 +291,8 @@ input:checked + .store-switch-slider:before {
     box-shadow: 0px 0px 20px;
 }
 
+#store-namefilter {
+    font-size: 16px;
+    width: 180px;
+}
+
